--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -140,10 +140,9 @@ resources:
     repository: cloudfoundry-incubator/consul-release
 
 - name: turbulence-release
-  type: github-release
+  type: bosh-io-release
   source:
-    user: cppforlife
-    repository: turbulence-release
+    repository: cppforlife/turbulence-release
 
 - name: oss-s3-buckets-stack
   type: git
